solved some errors

--- a/templates/customadmin/users.html
+++ b/templates/customadmin/users.html
@@ -315,7 +315,7 @@
                 </tbody>
             </table>
 		</div>
-			<a href="/dashboard/" class="btn btn-danger"><i class="material-icons"></i> <span >back to admin home</span></a>	
+			<a href="{% url 'adminside:dashboard' %}" class="btn btn-danger"><i class="material-icons"></i> <span >back to admin home</span></a>	
 			
 			
         </div>
