--- a/templates/userside/cart.html
+++ b/templates/userside/cart.html
@@ -69,13 +69,13 @@
                         <ul class="top-menu">
                             <li>
                                 <a href="#">Links</a>
-                                <ul>
+                                {% comment %} <ul>
                                     <li><a href="tel:#"><i class="icon-phone"></i>Call: +0123 456 789</a></li>
                                     <li><a href="wishlist.html"><i class="icon-heart-o"></i>Wishlist <span>(3)</span></a></li>
                                     <li><a href="about.html">About Us</a></li>
                                     <li><a href="contact.html">Contact Us</a></li>
                                     <li><a href="#signin-modal" data-toggle="modal"><i class="icon-user"></i>Login</a></li>
-                                </ul>
+                                </ul> {% endcomment %}
                             </li>
                         </ul><!-- End .top-menu -->
                     </div><!-- End .header-right -->
@@ -338,128 +338,8 @@
                                         </div><!-- End .row -->
                                     </div><!-- End .megamenu megamenu-md -->
                                 </li>
-                                <li>
-                                    <a href="product.html" class="sf-with-ul">Product</a>
-
-                                    <div class="megamenu megamenu-sm">
-                                        <div class="row no-gutters">
-                                            <div class="col-md-6">
-                                                <div class="menu-col">
-                                                    <div class="menu-title">Product Details</div><!-- End .menu-title -->
-                                                    <ul>
-                                                        <li><a href="product.html">Default</a></li>
-                                                        <li><a href="product-centered.html">Centered</a></li>
-                                                        <li><a href="product-extended.html"><span>Extended Info<span class="tip tip-new">New</span></span></a></li>
-                                                        <li><a href="product-gallery.html">Gallery</a></li>
-                                                        <li><a href="product-sticky.html">Sticky Info</a></li>
-                                                        <li><a href="product-sidebar.html">Boxed With Sidebar</a></li>
-                                                        <li><a href="product-fullwidth.html">Full Width</a></li>
-                                                        <li><a href="product-masonry.html">Masonry Sticky Info</a></li>
-                                                    </ul>
-                                                </div><!-- End .menu-col -->
-                                            </div><!-- End .col-md-6 -->
-
-                                            <div class="col-md-6">
-                                                <div class="banner banner-overlay">
-                                                    <a href="category.html">
-                                                        <img src="static/images/menu/banner-2.jpg" alt="Banner">
-
-                                                        <div class="banner-content banner-content-bottom">
-                                                            <div class="banner-title text-white">New Trends<br><span><strong>spring 2019</strong></span></div><!-- End .banner-title -->
-                                                        </div><!-- End .banner-content -->
-                                                    </a>
-                                                </div><!-- End .banner -->
-                                            </div><!-- End .col-md-6 -->
-                                        </div><!-- End .row -->
-                                    </div><!-- End .megamenu megamenu-sm -->
-                                </li>
-                                <li>
-                                    <a href="#" class="sf-with-ul">Pages</a>
-
-                                    <ul>
-                                        <li>
-                                            <a href="about.html" class="sf-with-ul">About</a>
-
-                                            <ul>
-                                                <li><a href="about.html">About 01</a></li>
-                                                <li><a href="about-2.html">About 02</a></li>
-                                            </ul>
-                                        </li>
-                                        <li>
-                                            <a href="contact.html" class="sf-with-ul">Contact</a>
-
-                                            <ul>
-                                                <li><a href="contact.html">Contact 01</a></li>
-                                                <li><a href="contact-2.html">Contact 02</a></li>
-                                            </ul>
-                                        </li>
-                                        <li><a href="login.html">Login</a></li>
-                                        <li><a href="faq.html">FAQs</a></li>
-                                        <li><a href="404.html">Error 404</a></li>
-                                        <li><a href="coming-soon.html">Coming Soon</a></li>
-                                    </ul>
-                                </li>
-                                <li>
-                                    <a href="blog.html" class="sf-with-ul">Blog</a>
-
-                                    <ul>
-                                        <li><a href="blog.html">Classic</a></li>
-                                        <li><a href="blog-listing.html">Listing</a></li>
-                                        <li>
-                                            <a href="#">Grid</a>
-                                            <ul>
-                                                <li><a href="blog-grid-2cols.html">Grid 2 columns</a></li>
-                                                <li><a href="blog-grid-3cols.html">Grid 3 columns</a></li>
-                                                <li><a href="blog-grid-4cols.html">Grid 4 columns</a></li>
-                                                <li><a href="blog-grid-sidebar.html">Grid sidebar</a></li>
-                                            </ul>
-                                        </li>
-                                        <li>
-                                            <a href="#">Masonry</a>
-                                            <ul>
-                                                <li><a href="blog-masonry-2cols.html">Masonry 2 columns</a></li>
-                                                <li><a href="blog-masonry-3cols.html">Masonry 3 columns</a></li>
-                                                <li><a href="blog-masonry-4cols.html">Masonry 4 columns</a></li>
-                                                <li><a href="blog-masonry-sidebar.html">Masonry sidebar</a></li>
-                                            </ul>
-                                        </li>
-                                        <li>
-                                            <a href="#">Mask</a>
-                                            <ul>
-                                                <li><a href="blog-mask-grid.html">Blog mask grid</a></li>
-                                                <li><a href="blog-mask-masonry.html">Blog mask masonry</a></li>
-                                            </ul>
-                                        </li>
-                                        <li>
-                                            <a href="#">Single Post</a>
-                                            <ul>
-                                                <li><a href="single.html">Default with sidebar</a></li>
-                                                <li><a href="single-fullwidth.html">Fullwidth no sidebar</a></li>
-                                                <li><a href="single-fullwidth-sidebar.html">Fullwidth with sidebar</a></li>
-                                            </ul>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li>
-                                    <a href="elements-list.html" class="sf-with-ul">Elements</a>
-
-                                    <ul>
-                                        <li><a href="elements-products.html">Products</a></li>
-                                        <li><a href="elements-typography.html">Typography</a></li>
-                                        <li><a href="elements-titles.html">Titles</a></li>
-                                        <li><a href="elements-banners.html">Banners</a></li>
-                                        <li><a href="elements-product-category.html">Product Category</a></li>
-                                        <li><a href="elements-video-banners.html">Video Banners</a></li>
-                                        <li><a href="elements-buttons.html">Buttons</a></li>
-                                        <li><a href="elements-accordions.html">Accordions</a></li>
-                                        <li><a href="elements-tabs.html">Tabs</a></li>
-                                        <li><a href="elements-testimonials.html">Testimonials</a></li>
-                                        <li><a href="elements-blog-posts.html">Blog Posts</a></li>
-                                        <li><a href="elements-portfolio.html">Portfolio</a></li>
-                                        <li><a href="elements-cta.html">Call to Action</a></li>
-                                        <li><a href="elements-icon-boxes.html">Icon Boxes</a></li>
-                                    </ul>
-                                </li>
+                              
+                              
                             </ul><!-- End .menu -->
                         </nav><!-- End .main-nav -->
                     </div><!-- End .header-left -->
@@ -675,7 +555,7 @@
                                                         <label class="custom-control-label" for="free-shipping">Free Shipping</label>
                                                     </div><!-- End .custom-control -->
                                                 </td>
-                                                <td>$0.00</td>
+                                                <td>₹0.00</td>
                                             </tr><!-- End .summary-shipping-row -->
                                             <tr class="summary-shipping-row">
                                                 <td>
@@ -684,7 +564,7 @@
                                                         <label class="custom-control-label" for="standart-shipping">Standard:</label>
                                                     </div><!-- End .custom-control -->
                                                 </td>
-                                                <td>$10.00</td>
+                                                <td>₹0.00</td>
                                             </tr><!-- End .summary-shipping-row -->
                                             <tr class="summary-shipping-row">
                                                 <td>
@@ -693,20 +573,18 @@
                                                         <label class="custom-control-label" for="express-shipping">Express:</label>
                                                     </div><!-- End .custom-control -->
                                                 </td>
-                                                <td>$20.00</td>
+                                                <td>₹0.00</td>
                                             </tr><!-- End .summary-shipping-row -->
-                                            <tr class="summary-shipping-estimate">
-                                                <td>Estimate for Your Country<br> <a href="dashboard.html">Change address</a></td>
-                                                <td>&nbsp;</td>
-                                            </tr><!-- End .summary-shipping-estimate -->
+                                           
                                             <tr class="summary-total">
                                                 <td>Total:</td>
-                                                <td>{{ sub_total }}</td>
+                                                <td>₹{{ sub_total }}</td>
                                             </tr><!-- End .summary-total -->
                                             <tr class="summary-checkout">
                                                 <td colspan="2" class="text-center">
                                                     <a href="{% url 'cartapp:proceed_to_checkout' %}" class="btn btn-primary">Proceed to Checkout</a>
                                                 </td>
+                                                
                                             </tr><!-- End .summary-checkout -->
                                         </tbody>
                                     </table><!-- End .table table-summary -->
@@ -1095,58 +973,61 @@
     <script src="static/js/owl.carousel.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="static/js/bootstrap-input-spinner.js"></script>
+    <script src="{% static 'js/script.js' %}"></script>
     <!-- Main JS File -->
     <script src="static/js/main.js"></script>
-
-<script>
-    function getCookie(name) {
-        let cookieValue = null;
-        if (document.cookie && document.cookie !== '') {
-            const cookies = document.cookie.split(';');
-            for (let i = 0; i < cookies.length; i++) {
-                const cookie = cookies[i].trim();
-                // Does this cookie string begin with the name we want?
-                if (cookie.substring(0, name.length + 1) === (name + '=')) {
-                    cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
-                    break;
+    <script>
+        function getCookie(name) {
+            let cookieValue = null;
+            if (document.cookie && document.cookie !== '') {
+                const cookies = document.cookie.split(';');
+                for (let i = 0; i < cookies.length; i++) {
+                    const cookie = cookies[i].trim();
+                    // Does this cookie string begin with the name we want?
+                    if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                        cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                        break;
+                    }
                 }
             }
+            return cookieValue;
         }
-        return cookieValue;
-    }
-    function updateQuantity(prod_id,count,size){
-        console.log('hiiiiii',prod_id)
-        const data =new URLSearchParams()
-        data.append('product_id',prod_id)
-        data.append('count',count)
-        data.append('size',size)
+        function updateQuantity(prod_id,count,size){
+            console.log('hiiiiii',prod_id)
+            const data =new URLSearchParams()
+            data.append('product_id',prod_id)
+            data.append('count',count)
+            data.append('size',size)
+    
+    
+            const csrftoken = getCookie('csrftoken');
+            fetch('{% url 'cartapp:quantity_upadate' %}',{
+                method:'POST',
+                headers:{
+                    'Content-Type':'application/x-www-form-urlencoded',
+                    'X-CSRFToken':csrftoken
+                },
+                body:data.toString()
+            })
+            .then(response=>response.json())
+            .then(data=>{
+               if(data.status=='success'){
+                console.log(data)
+                location.reload()
+               }else if(data.status=='out'){
+                Swal.fire("Product is out of stock");
+    
+               }else{
+                Swal.fire('can not decrease anymore')
+               }
+                    
+            
+            })
+        }
+    </script>
 
 
-        const csrftoken = getCookie('csrftoken');
-        fetch('{% url 'cartapp:quantity_upadate' %}',{
-            method:'POST',
-            headers:{
-                'Content-Type':'application/x-www-form-urlencoded',
-                'X-CSRFToken':csrftoken
-            },
-            body:data.toString()
-        })
-        .then(response=>response.json())
-        .then(data=>{
-           if(data.status=='success'){
-            console.log(data)
-            location.reload()
-           }else if(data.status=='out'){
-            Swal.fire("Product is out of stock");
 
-           }else{
-            Swal.fire('can not decrease anymore')
-           }
-                
-        
-        })
-    }
-</script>
 </body>
 
 
