--- a/templates/userside/view.html
+++ b/templates/userside/view.html
@@ -441,7 +441,7 @@
 	                <div class="container ">
 	                	<div class="row">
 	                		<aside class="col-md-4 col-lg-3">
-	                			<ul class="nav nav-dashboard flex-column mb-3 mb-md-0" role="tablist">
+	                			{% comment %} <ul class="nav nav-dashboard flex-column mb-3 mb-md-0" role="tablist">
 								    <li class="nav-item">
 								        <a class="nav-link active" style="font-weight: bold;" id="tab-dashboard-link" data-toggle="tab" href="#tab-dashboard" role="tab" aria-controls="tab-dashboard" aria-selected="true">Dashboard</a>
 								    </li>
@@ -460,7 +460,7 @@
 								    <li class="nav-item">
 								        <a class="nav-link" style="font-weight: bold;" href="#">Sign Out</a>
 								    </li>
-								</ul>
+								</ul> {% endcomment %}
 	                		</aside><!-- End .col-lg-3 -->
                             <div class="col-8 " style=" margin-left: 38px; margin-top: -20px;">
                                 
@@ -478,7 +478,7 @@
                                                                 
                                                     <a style="color: black; font-size: small; font-weight: bold;"> 
                                                          
-                                                          Name:  {{ ordered_item.user.username }}</a>  <br>
+                                                          Name:  {{ ordered_item.address.address_name }}</a>  <br>
                                                          
 <a style="color: black; font-size: small; font-weight: bold;">   Address:{{ ordered_item.address.Address }}</a> 
                     
@@ -487,7 +487,7 @@
                                             </div>
                                             <div class="col-md-4 col-6 address-card">
                                                 <p style="font-size: 15px;" class="form-control" >
-                                                 <a style="color: black; font-size: small; font-weight: bold; ">    Email: {{ ordered_item.user.email }} </a> <br>
+                                                 <a style="color: black; font-size: small; font-weight: bold; ">    Email: {{ ordered_item.address.address_Email }} </a> <br>
                                                  <a style="color: black; font-size: small; font-weight: bold;">    LandMark: {{ ordered_item.address.landmark }}</a><br>
                                                  <a style="color: black; font-size: small; font-weight: bold; ">     State:{{ ordered_item.address.state }}</a>                                                    
                                                 </p>
