--- a/templates/userside/checkout.html
+++ b/templates/userside/checkout.html
@@ -651,6 +651,14 @@
                                                         <input checked type="radio" name="payment_method" value="cash_on_delivery" id="payment-cash-on-delivery">
                                                         <label for="payment-cash-on-delivery">Cash on Delivery</label>
                                                     </h2>
+                                                    
+                                                </div>
+                                                <div class="card-header" id="heading-3">
+                                                    <h2 class="card-title">
+                                                        <input checked type="radio" name="payment_method" value="cash_on_delivery" id="payment-cash-on-delivery">
+                                                        <label for="payment-cash-on-delivery">Razor Pay</label>
+                                                    </h2>
+                                                    
                                                 </div>
                                                 <div id="collapse-3" class="collapse" aria-labelledby="heading-3" data-parent="#accordion-payment">
                                                     <div class="card-body">Quisque volutpat mattis eros. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros.
